--- a/wiki/WindowsCompilation.wiki
+++ b/wiki/WindowsCompilation.wiki
@@ -7,15 +7,16 @@
 <a target="_blank" href="http://wowmodelviewer.googlecode.com/svn/trunk/doc/ChangeLog.txt">Changelog</a> >
 
 [http://i43.tinypic.com/25zh65e.jpg]
+ _To build the v0.8.0.0 WoW Model Viewer on Windows, please view <a href="http://code.google.com/p/wowmodelviewer/wiki/v0800_WindowsCompilation">this page</a>._
 = Introduction =
 Some of the work is already done for users of Visual Studio 2008 & 2010. Check [WindowsCompilation#Uncommon_Events Uncommon Events] if you are using Visual Studio 2005 or another compiler.
 
 = Common Events =
 Everyone needs to do the following:
 ==Download and install wxWidgets 2.8.11==
- # Get wxMSW - installer for Windows(wxMSW-2.8.11-Setup.exe) from [http://www.wxwidgets.org/downloads/ the wxWidgets Website].
- # Install wxMSW-2.8.11-Setup.exe to C:\wxWidgets-2.8.11\
- # Use Visual Studio 2008 to open wxWidgets-2.8.11\build\msw\wx.dsw and build a Debug & Release version.
+ # Get wxMSW - installer for Windows (`wxMSW-2.8.11-Setup.exe`) from [http://www.wxwidgets.org/downloads/ the wxWidgets Website].
+ # Install `wxMSW-2.8.11-Setup.exe` to `C:\wxWidgets-2.8.11\`
+ # Use Visual Studio 2008 to open `wxWidgets-2.8.11\build\msw\wx.dsw` and build a Debug & Release version.
 ==64-Bit==
 If you are building a 64-bit version of WoW Model Viewer, you also need to do the following:
  # Add a 64-bit Configuration. (May not be needed if you get wxWidgets 2.9.0, but that version has not yet been tested.)
@@ -24,8 +25,8 @@ If you are building a 64-bit version of WoW Model Viewer, you also need to do th
 =WoWModelViewer=
 If you need a Subversion program, I recommend [http://tortoisesvn.net/ TortoiseSVN] for Windows users, or you can try one of the ones [http://subversion.apache.org/packages.html listed here].
  # Get wowmodelviewer from [http://code.google.com/p/wowmodelviewer/source/checkout here]. Please refer to your Subversion software's documentation on how to checkout (download) the source code listed on the checkout page.
- # Use Visual Studio 2008 to open wowmodelviewer-read-only\src\wowmodelview_VC90.sln or Visual Studio 2010 to open wowmodelviewer-read-only\src\wowmodelview_VC100.sln
- # If you are not using one of the provided Visual Studio sln files, you will need to open wowmodelviewer-read-only\src\stormlib and compile that first.
+ # Use Visual Studio 2008 to open `wowmodelviewer-read-only\src\wowmodelview_VC90.sln` or Visual Studio 2010 to open `wowmodelviewer-read-only\src\wowmodelview_VC100.sln`
+ # If you are not using one of the provided Visual Studio sln files, you will need to open `wowmodelviewer-read-only\src\stormlib` and compile that first.
  # Build the WMV project.
 
 Congratulations! You should have successfully compiled WMV's source code!
@@ -33,22 +34,22 @@ Congratulations! You should have successfully compiled WMV's source code!
 = Uncommon Events =
 If you are building on Visual Studio 2005, or you are not using Visual Studio, you will also need to do the following:
 ==Build Glew Libraries==
- # Navigate to wowmodelviewer-read-only\src\glew\build\vc6
- # Convert glew.dsw to your project type.
+ # Navigate to `wowmodelviewer-read-only\src\glew\build\vc6`
+ # Convert `glew.dsw` to your project type.
  # Compile Release and Debug versions.
 ==64-Bit==
- # Navigate to wowmodelviewer-read-only\src\glew\build\vc6
- # Convert glew.dsw to your project type.
+ # Navigate to `wowmodelviewer-read-only\src\glew\build\vc6`
+ # Convert `glew.dsw` to your project type.
  # Build 64-bit compilations, if nessicary.
  # Compile 64-bit Release & Debug versions.
 
 ==Build CxImage Libraries==
- # Get cximage600_full.7z from http://www.xdp.it/cximage.htm
- # Extract the files to C:\cximage600_full and open/convert CxImgLib.dsw. Build a release and a debug version of the CXImageCrtdll project.
- # copy bin\cximagecrt32.dll & bin\cximagecrt32d.dll to wowmodelviewer-read-only\bin_support\(OS)\32bit.
- # copy CxImage\CxImageDLL\Debug\cximagecrt32d.lib & CxImage\CxImageDLL\Release\cximagecrt32.lib to wowmodelviewer-read-only\src\lib\(OS)\32bit.
+ # Get `cximage600_full.7z` from http://www.xdp.it/cximage.htm
+ # Extract the files to `C:\cximage600_full` and open/convert `CxImgLib.dsw`. Build a release and a debug version of the `CXImageCrtdll` project.
+ # Copy `bin\cximagecrt32.dll` & `bin\cximagecrt32d.dll` to `wowmodelviewer-read-only\bin_support\(OS)\32bit`.
+ # Copy `CxImage\CxImageDLL\Debug\cximagecrt32d.lib` & `CxImage\CxImageDLL\Release\cximagecrt32.lib` to `wowmodelviewer-read-only\src\lib\(OS)\32bit`.
 ==64-Bit==
  # Add a configuration for 64-bits to all the projects within the CxImgLib solution. (This will take some time.) I recommend sending the binary information to a new directory, specifically for 64bits. (bin64, Release64 & Debug64 for example.)
  # Compile 64-bit Release & Debug versions.
- # copy bin64\cximagecrt64.dll & bin64\cximagecrt64d.dll to wowmodelviewer-read-only\bin_support\(OS)\64bit.
- # copy CxImage\CxImageDLL\Debug64\cximagecrt64d.lib & CxImage\CxImageDLL\Release64\cximagecrt64.lib to wowmodelviewer-read-only\src\lib\(OS)\64bit.
+ # Copy `bin64\cximagecrt64.dll` & `bin64\cximagecrt64d.dll` to `wowmodelviewer-read-only\bin_support\(OS)\64bit`.
+ # Copy `CxImage\CxImageDLL\Debug64\cximagecrt64d.lib` & `CxImage\CxImageDLL\Release64\cximagecrt64.lib` to `wowmodelviewer-read-only\src\lib\(OS)\64bit`.
