--- a/trunk/doc/ChangeLog.txt
+++ b/trunk/doc/ChangeLog.txt
@@ -1,5 +1,10 @@
 World of Warcraft Model Viewer v0.7.0.1
 
+r613 (Pickled Herring)
+ - Updated the Armory API. Armory import now supports full facial recognition.
+ - Fixed missing jaws issue.
+
+
 r610 (Demented Deathwing)
  - WMV now requires Administrator priveledges.
  - Texture fixes.
