--- a/wiki/v0800_WindowsCompilation.wiki
+++ b/wiki/v0800_WindowsCompilation.wiki
@@ -17,7 +17,7 @@ First, we need some software.
 
 Qt comes with [http://doc.qt.nokia.com/4.7-snapshot/platform-notes.html several compilers pre-built], so it will work with a lot of systems out-of-the-box. Some systems, however, (Visual Studio 2010, for one) are not yet available, and must be compiled by users before Qt can be used by those IDEs. *Not everyone has to download these files.*
  * [http://qt.nokia.com/downloads/downloads#qt-lib Qt SDK] - This will let you build a QMake project so you can use a compiler that is not natively supported.
- * [ftp://ftp.qt.nokia.com/jom/ Jom] - Jom is nmake replacement for Qt compilation on multi-core CPU. Its parameter `-j N` allows to setup number of parallel processes for compilation. Number of physical CPU cores is good choice for N.
+ * [ftp://ftp.qt.nokia.com/jom/ Jom] - Jom is nmake replacement for Qt compilation on multi-core CPU. Its parameter `-j N` allows you to specify the number of parallel processes for compilation. Number of physical CPU cores is good choice for N. For these instructions, we'll asssume you have 2 cores.
 
 === Visual Studio ===
 If you are using Visual Studio, there are one or two additional things you should download.
@@ -47,9 +47,10 @@ In order to build a 64-bit WoW Model Viewer, you *MUST* compile a 64-bit Qt fram
  # Run following commands in it:
 {{{
  cd D:\QtSDK\Desktop\Qt\4.7.3\msvc2010-32
- configure -debug-and-release -opensource -platform win32-msvc2010 (Same as QMAKESPEC from step 4.)
- ..\jom\jom.exe -j [Number of CPU cores in current system. IE: 2]
+ configure -debug-and-release -opensource -platform win32-msvc2010
+ ..\jom\jom.exe -j 2
 }}}
+ # Make sure `-j 2` specifies the number of CPU cores in your current system. IE: Dual-Core systems have 2 and Hex-Core systems have 6.
  # Allow Jom to run. Depending on your system, this may take a few hours.
  # Install Qt Visual Studio Add-in.
  # Load Visual Studio 2010.
@@ -61,7 +62,9 @@ In order to build a 64-bit WoW Model Viewer, you *MUST* compile a 64-bit Qt fram
 = Building WoWModelViewer =
 If you need a Subversion program, I recommend [http://tortoisesvn.net/ TortoiseSVN] for Windows users, or you can try one of the ones [http://subversion.apache.org/packages.html listed here].
  # Checkout (download) `http://wowmodelviewer.googlecode.com/svn/branches/wmv0800` as outlined [http://code.google.com/p/wowmodelviewer/source/checkout here]. Please refer to your Subversion software's documentation on how to checkout  the source code listed on the checkout page.
- # Use Visual Studio 2008 to open `wowmodelviewer-read-only\Source\WMV_VC90.sln`, or Visual Studio 2010 to open `wowmodelviewer-read-only\Source\WMV_VC100.sln`.
+ # Navigate to `wowmodelviewer-read-only\Source\StormLib` and open `StormLib_VC100.sln` if you're using Visual Studio 2008, or `StormLib_VC100.sln` if you're using Visual Studio 2010.
+ # Compile Debug and Release configurations for 32-bit. If you're planning to build a 64-bit version of WMV, build the 64-bit configurations too.
+ # Open `wowmodelviewer-read-only\Source\WMV_VC90.sln` for Visual Studio 2008, or `wowmodelviewer-read-only\Source\WMV_VC100.sln` for Visual Studio 2010.
  # Build the WMV project.
 
 Congratulations! You should have successfully compiled WoW Model Viewer v0.8.0.0's source code!
