WMV v0.8.0.0 -Directories will now properly list in the menu. -You can now specify which WoW directory is your current directory. You can change this in the menu or in the WoW Directory Manager. -Fixed a bug that wouldn't update the menu if a WoW directory wasn't loaded.
And with this, the way is paved for the next big step in WMV v8! I still have some things to do/fill out in the WDM, but the main functionality of it is there, and it's working great!

--- a/Documentation/ChangeLog.txt
+++ b/Documentation/ChangeLog.txt
@@ -1,5 +1,11 @@
 WoW Model Viewer v0.8.0.0
 
+r631
+-Directories will now properly list in the menu.
+-You can now specify which WoW directory is your current directory. You can change this in the menu or in the WoW Directory Manager.
+-Fixed a bug that wouldn't update the menu if a WoW directory wasn't loaded.
+
+
 r629
 -WMV can now open the log.txt file on most operating systems!
 -Refined MPQ functions a bit.
