WMV-78: Plugin Edition -Settings file is now active. -Started work on Cinema interface. -Viewer/Cinema interface will load depending on the StartupInterfaceMode option in wmv.ini file. Currently can't switch while the program is running. -You can no longer Load WoW if you don't have any woW directories specified. -Plugins will now load into TheKernel. Note: TheKernel is not yet a singleton, and it's data can not yet be accessed outside the main.cpp file. -ExporterCanDo no longer defines WoW-Specific details, but instead specifies similar functionalities that will be available from the ModelViewerModel format. All exporters will export data from the ModelViewerModel format, and not from the WoW Data. This way, exporters will only have to be updated when the ModelViewerModel format is changed. -Renamed BUILDVERSION to BUILDVERSIONNAME -Started documentation for the file-formats that will be used by WMV. NOTE: The file formats listed inside are WIPs. Changes may occur without a version update until they are coded. -Websites on the About window are now dynamic, and can be changed from the version.h file.
v0.7.0.4
-Fixed a bug that would save Lighting files in the application's directory, and not where the user wanted it.
-Release Update
-Updated ChangeLog.txt
-Added missing information into the License file.
-Corrected some reversion issues with StormLib.

--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -1,6 +1,17 @@
-World of Warcraft Model Viewer v0.7.0.3
+World of Warcraft Model Viewer v0.7.0.4
 
-v0.7.0.3
+v0.7.0.4 (Bouncing Baracuda)
+ - Item Updates for Patch 4.3.2
+ - Fixed FBX Exporter not working bug.
+ - Added an enGB locale directory. (Has the same content as the enUS Locale)
+ - Fixed a bug that would save Lighting files in the application's directory, and not where the user wanted it.
+ - Fixed a Linux bug.
+ - PTR 4.3.2 added new MPQ: world2.MPQ
+ - Uppercase the MPQ suffix
+ - Update stormlib to 8.02
+ - Update to libglew 1.7
+
+v0.7.0.3 (Greatfather Winter)
  - Fixed 4.3 support!
  - Fixed a problem with texture search id dbc files
  - Removed some asserts (should never be present in a released software)
